pkg/lang/testdata/ub/inputs/invalid/collects-multiple.ub
inputs: {
  one: { description: 'no type' }
  two: { type: weird-atomic, bogus: 1 }
  three: 'not an object'
}
